Working Cookie Banner

--- a/src/components/forms.module.scss
+++ b/src/components/forms.module.scss
@@ -1,5 +1,5 @@
 @import "../styles/variables.scss";
-@import "./header.scss";
+@import "./header.module.scss";
 
 #formsDiv {
   transition: all 0.5s linear;
