Working reset: last update: cookie banner

--- a/src/styles/forms.module.scss
+++ b/src/styles/forms.module.scss
@@ -1,5 +1,5 @@
 @import "../styles/variables.scss";
-@import "./header.module.scss";
+@import "./header.scss";
 
 #formsDiv {
   transition: all 0.5s linear;
