--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -5,9 +5,23 @@
   margin-bottom: 0;
 }
 
+#footer {
+  width: 100%;
+  z-index: 100;
+  display: grid;
+  height: 60px;
+  grid-template-columns: $grid;
+  grid-column-gap: $gap;
+  grid-template-rows: 0;
+  background-color: transparent;
+  padding: $margin-top $margin-left-right $margin-top $margin-left-right;
+  transition: all ease 1s;
+  margin-top: $margin-bottom-primary;
+}
+
 #aboutPoolBooksWrapper {
   min-height: 0;
-  min-width:0;
+  min-width: 0;
   margin: $margin-left-right;
   display: grid;
   grid-template-columns: $grid;
@@ -29,50 +43,33 @@
 }
 
 #aboutPoolBooksAboutText {
-  min-width:0;
+  min-width: 0;
   grid-column: 1 / span 4;
   min-height: 0;
 }
 
 #aboutPoolBooksAboutAddress {
   min-height: 0;
-  min-width:0;
+  min-width: 0;
   grid-column: 5 / span 3;
 }
 
-#aboutPoolBooksSociaMedia {
+#aboutPoolBooksSocialMedia {
   min-height: 0;
-  min-width:0;
+  min-width: 0;
   justify-self: end;
   grid-column: 7 / span 2;
-}
-
-#footer {
-  width: 100%;
-  z-index: 100;
-  display: grid;
-  height: 60px;
-  grid-template-columns: $grid;
-  grid-column-gap: $gap;
-  grid-template-rows: 0;
-  background-color: transparent;
-  padding: $margin-top $margin-left-right $margin-top $margin-left-right;
-  transition: all ease 1s;
-  margin-top: $margin-bottom-primary;
-  // margin-top: 300px;
 }
 
 #footerNav {
   grid-column: 5 / span 4;
 }
 
-@media (max-width: 1400px) {
-  #footer {
-    margin-top: 400px;
-  }
-}
-
 @media (max-width: 1200px) {
+  #aboutPoolBooksWrapper {
+    display: block;
+    padding-bottom: 0px;
+  }
 
   #footerWrapper {
     margin-top: 90px;
@@ -82,5 +79,10 @@
     margin-top: 0px;
     display: none;
   }
+}
 
+@media (max-width: 750px) {
+  #aboutPoolBooksWrapper {
+    display: block;
+}
 }
