--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -84,14 +84,14 @@ a:hover {
   height: 1000px;
 }
 
-#landingPageWrapper {
-  margin-top: 15px;
-}
+// #landingPageWrapper {
+//   margin-top: 13px;
+// }
 
 @media (max-width: 750px) {
-  #landingPageWrapper {
-    margin-top: 30px;
-  }
+  // #landingPageWrapper {
+  //   margin-top: 30px;
+  // }
 
   .content {
     padding-top: 80px;
