--- a/src/styles/headerMain.module.scss
+++ b/src/styles/headerMain.module.scss
@@ -87,11 +87,6 @@
   border-top: solid 1px $secondary-gray;
 }
 
-#text {
-  display: inline-block;
-  // transition: ease 0.4s all;
-}
-
 #cart-mobile {
   border-bottom: solid 1px $secondary-gray;
 }
@@ -109,12 +104,69 @@
   color: $secondary-gray;
 }
 
-#poolText {
+#poolLogo {
   display: inline-block;
+  position: absolute;
+  left: 0;
+  margin-bottom: 0;
   // transition: ease 0.4s all;
 }
 
+.poolSubheadline {
+  display: inline-block;
+  opacity: 0;
+  margin-right: 7px;
+  position: absolute;
+}
+
+#dividerForMousover {
+  cursor: pointer;
+  position: absolute;
+  top: 15px;
+  width: 200px;
+  height: 30px;
+  left: 0;
+  z-index: 1000000000;
+}
+
+#dividerForMousoverLandingPage {
+  // background-color: red;
+  cursor: pointer;
+  position: absolute;
+  bottom: 15px;
+  width: 200px;
+  height: 30px;
+  left: 0;
+  z-index: 1000000000;
+}
+
+#h1Main {
+  z-index: 101;
+  cursor: default;
+  grid-column: 1 / span 4;
+  transition: opacity ease 0.4s;
+  display: flex;
+}
+
+#h1Main span {
+  transition: opacity ease 1s;
+}
+
+#h1Main:hover {
+  transition: all ease 1s;
+}
+
+.poolSubheadlineMobile {
+  display: inline;
+  margin: 0;
+}
+
+.menuMain {
+  display: none;
+}
+
 #beanWrapper {
+  display: inline-block;
   transition: ease 0.4s all;
   margin: 0 1px;
 }
@@ -132,8 +184,6 @@
 }
 
 .close {
-  // display: flex;
-  // justify-content: center;
   cursor: pointer;
   position: fixed;
   width: 24px;
@@ -194,25 +244,6 @@
   grid-column: 7 / span 2;
 }
 
-#h1Main {
-  z-index: 101;
-  cursor: default;
-  grid-column: 1 / span 4;
-  transition: opacity ease 0.4s;
-}
-
-#h1Main span {
-  transition: opacity ease 1s;
-}
-
-#h1Main:hover {
-  transition: all ease 1s;
-}
-
-.menuMain {
-  display: none;
-}
-
 @media (max-width: 1200px) {
   #h1Main {
     cursor: pointer;
@@ -235,11 +266,9 @@
     justify-content: space-between;
   }
 
-
   #banner {
     width: 100%;
     grid-template-columns: repeat(3, 1fr);
-
   }
 
   #banner-cookies {
@@ -251,23 +280,23 @@
     left: 0;
     right: 0;
     text-align: center;
-  } 
+  }
 
   #banner-yes {
     grid-column: 3 / span 1;
     z-index: 3;
-  } 
-  
+  }
+
+
+  .poolSubheadlineMobile {
+    display: inline;
+  }
+
 }
 
 @media (max-width: 750px) {
   #mobileNestedNav {
     height: 98%;
-  }
-
-  #h1Mobile {
-    transition: all 0.3s ease;
-    margin-top: 7px;
   }
 
   #mobileNestedNav a,
