--- a/src/styles/headerMain.module.scss
+++ b/src/styles/headerMain.module.scss
@@ -180,31 +180,9 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding-right: $margin-left-right/2;
+  align-items: center;
 }
 
-.close {
-  cursor: pointer;
-  position: fixed;
-  width: 24px;
-  height: 24px;
-}
-
-.close:before,
-.close:after {
-  position: fixed;
-  content: " ";
-  height: 25px;
-  width: 1.4px;
-  background-color: $secondary-gray;
-}
-
-.close:before {
-  transform: rotate(45deg);
-}
-.close:after {
-  transform: rotate(-45deg);
-}
 
 #burgerIcon {
   width: 100%;
