Fixed Logo animation

--- a/src/styles/headerMain.module.scss
+++ b/src/styles/headerMain.module.scss
@@ -121,7 +121,7 @@
 
 #dividerForMousover {
   cursor: pointer;
-  position: absolute;
+  position: fixed;
   top: 15px;
   width: 200px;
   height: 30px;
