another forms bugfix try

--- a/src/styles/forms.module.scss
+++ b/src/styles/forms.module.scss
@@ -3,20 +3,20 @@
 
 #formsDiv {
   transition: all 0.5s linear;
-  height: 100%;
 }
 
 #forms {
   scroll-behavior: smooth;
   position: relative;
   z-index: -10;
-  height: 100vh;
+  // height: 100vh;
   width: 100%;
   overflow: auto;
   transition: all ease 1s;
 }
 
 .formItem {
+  min-height: -webkit-fill-available;
   padding: 1rem;
   position: absolute;
   display: block;
@@ -33,6 +33,7 @@
     //this is a fallback
     // height: 100vh;
     //this makes the height: 100% on mobile
+    min-height: -webkit-fill-available;
     height: 100vh;
   }
 }
