--- a/src/styles/forms.module.scss
+++ b/src/styles/forms.module.scss
@@ -21,10 +21,10 @@
   display: block;
   width: 100vw;
   height: 100%;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  // top: 0;
+  // bottom: 0;
+  // left: 0;
+  // right: 0;
 }
 
 @media (max-width: 750px) {
