--- a/src/styles/books.module.scss
+++ b/src/styles/books.module.scss
@@ -46,12 +46,22 @@ sup {
     // height: 100%;
 }
 
+.imageContainer {
+    width: 100%;
+    padding-top: 100%; /* 1:1 Aspect Ratio */
+    position: relative;
+}
+
 .bookRenderingContainer img{
-    min-width: 0;
-    min-height: 0;
-    max-width: 100%;
-    display: inline-block;
-    object-fit: contain;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 @media (max-width: 1200px) {
