--- a/src/styles/books.module.scss
+++ b/src/styles/books.module.scss
@@ -66,7 +66,7 @@ sup {
 
 @media (max-width: 1200px) {
     #books {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
     }
 
 }
