--- a/src/styles/forms.module.scss
+++ b/src/styles/forms.module.scss
@@ -32,6 +32,7 @@
     //this is a fallback
     // height: 100vh;
     //this makes the height: 100% on mobile
-    height: 100vh;
+    height: 95vh;
+    // padding-bottom: 80px;
   }
 }
